--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <body>
     <h1>Hello World</h1>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptas
-      eius facilis illo omnis! Eum cum similique dolor, nesciunt magnam
-      dignissimos exercitationem adipisci delectus deleniti eaque esse
+      Lorem Bassel ipsum dolor sit amet, consectetur adipng elit. F votas
+      eius filis illo os! Eum cum similique dolor, nesciunt manam
+      dignissimos Bassel  exercitationem adipisci  Bassel delectus testing deleniti eaque esse
       perferendis error recusandae.
     </p>
+
+    <h2> A change by Bassel</h2>
   </body>
 </html>
