Fix typos and formatting in index.html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptas
       eius facillfnsaljnfaljnis illo omnis! Eum cum similique dolor, nesciunt
       magnam digsafasnissimos exercitfasfasationem adipisci delectus deleniti
-      eaque esse perfasffsaerendis error recusandae.
+      eaque esse perfasffsaerendis error recusandae.jfhakjf
     </p>
 
-    <h2> A change by Bassel</h2>
+    <h2>A change by Bassel</h2>
     <script src="script.js"></script>
   </body>
 </html>
