--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Hello World</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptas
-      eius facillfnsaljnfaljnis illo omnis! Eum cum similique dolor, nesciunt
-      magnam digsafasnissimos exercitfasfasationem adipisci delectus deleniti
-      eaque esse perfasffsaerendis error recusandae.jfhakjf
-    </p>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <h2>A change by Bassel</h2>
-    <script src="script.js"></script>
+    <title>Sketch</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script src="libraries/p5.min.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
+  </head>
+
+  <body>
+    <script src="sketch.js"></script>
   </body>
 </html>
